--- a/service/core/client/src/main/resources/reference.conf
+++ b/service/core/client/src/main/resources/reference.conf
@@ -21,7 +21,7 @@ lagom.circuit-breaker {
     # the circuit, by first entering the half-open state.
     reset-timeout = 15s
 
-    # A whitelist of fqcn of Esxceptions that the CircuitBreaker
+    # A whitelist of fqcn of Exceptions that the CircuitBreaker
     # should not consider failures. By default all exceptions are
     # failures
     #
