upgrades akka-persistence-jdbc to 3.0.0 and promote usage of slick.profile instead of slick.driver (fixes #918 and #764)

--- a/persistence-jdbc/core/src/main/resources/reference.conf
+++ b/persistence-jdbc/core/src/main/resources/reference.conf
@@ -2,8 +2,9 @@
 # Defaults to use for each Akka persistence plugin
 jdbc-defaults.slick {
 
-  # The driver to use
-  driver = "slick.jdbc.H2Profile$"
+  # The Slick profile to use
+  # set to one of: slick.jdbc.PostgresProfile$, slick.jdbc.MySQLProfile$, slick.jdbc.OracleProfile$ or slick.jdbc.H2Profile$
+  # profile = "slick.jdbc.PostgresProfile$"
 
   # The JNDI name
   jndiName = "DefaultDS"
@@ -70,8 +71,11 @@ lagom.persistence.read-side.jdbc {
   # Slick configuration
   slick {
 
-    # The Slick driver
-    driver = ${jdbc-defaults.slick.driver}
+    # The Slick profile
+    profile = ${?jdbc-defaults.slick.profile}
+
+    # The Slick driver - for backward compatibility only, will be removed in 1.5.0 (@deprecated)
+    driver = ${?jdbc-defaults.slick.driver}
 
     # The JNDI name to use
     jndiName = ${jdbc-defaults.slick.jndiName}
