Reintroduces exit-jvm-when-system-terminated to control lifecycle in dev and tests

--- a/cluster/core/src/main/resources/reference.conf
+++ b/cluster/core/src/main/resources/reference.conf
@@ -12,6 +12,15 @@ lagom.cluster {
   # some time to stop gracefully.
   terminate-system-after-member-removed = 10s
 
+  # Exit the JVM forcefully when the ActorSystem has been terminated.
+  # This is by default off, but you may want to turn it on in production
+  # to restart the process.
+  # The recommended value (depending on the environment) is:
+  #    * development mode : off
+  #    * running tests : off
+  #    * production / staging  : on
+  exit-jvm-when-system-terminated = off
+
 }
 
 lagom.defaults.cluster.join-self = off
