--- a/dev/archetypes/maven-java/src/main/resources/archetype-resources/__service1Name__-api/pom.xml
+++ b/dev/archetypes/maven-java/src/main/resources/archetype-resources/__service1Name__-api/pom.xml
@@ -16,11 +16,11 @@
     <dependencies>
         <dependency>
             <groupId>com.lightbend.lagom</groupId>
-            <artifactId>lagom-javadsl-api_2.11</artifactId>
+            <artifactId>lagom-javadsl-api_${scala.binary.version}</artifactId>
         </dependency>
         <dependency>
             <groupId>com.lightbend.lagom</groupId>
-            <artifactId>lagom-javadsl-kafka-broker_2.11</artifactId>
+            <artifactId>lagom-javadsl-kafka-broker_${scala.binary.version}</artifactId>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
