Improves UX (comments and logs)

--- a/cluster/core/src/main/resources/reference.conf
+++ b/cluster/core/src/main/resources/reference.conf
@@ -12,9 +12,11 @@ lagom.cluster {
   # some time to stop gracefully.
   terminate-system-after-member-removed = 10s
 
-  # Exit the JVM forcefully when the ActorSystem has been terminated.
-  # This is by default off, but you may want to turn it on in production
-  # to restart the process.
+  # Exit the JVM forcefully when the ActorSystem has been terminated after
+  # removing the cluster membership (other causes of actor system termination
+  # will not trigger a JVM exit).
+  # This is by default off, but it should be turned on in production so the
+  # process restarts.
   # The recommended value (depending on the environment) is:
   #    * development mode : off
   #    * running tests : off
