--- a/cluster/core/src/main/resources/reference.conf
+++ b/cluster/core/src/main/resources/reference.conf
@@ -2,21 +2,27 @@
 lagom.cluster {
 
   # The cluster node will join itself if akka.cluster.seed-nodes is not configured.
-  # In dev-mode this setting will be on, otherwise the default is off. It's possible 
+  # In dev-mode this setting will be on, otherwise the default is off. It's possible
   # to override that by defining akka.cluster.seed-nodes or set this property to off in
   # the application.conf
   join-self = ${lagom.defaults.cluster.join-self}
-  
+
   # The ActorSystem is terminated when the cluster member
   # is removed. The delay is to give ClusterSingleton actors
   # some time to stop gracefully.
   terminate-system-after-member-removed = 10s
-  
-  # Exit the JVM forcefully when the ActorSystem has been terminated.
-  # This is by default off, but you may want to turn it on in production
-  # to restart the process.
+
+  # Exit the JVM forcefully when the ActorSystem has been terminated after
+  # removing the cluster membership (other causes of actor system termination
+  # will not trigger a JVM exit).
+  # This is by default off, but it should be turned on in production so the
+  # process restarts.
+  # The recommended value (depending on the environment) is:
+  #    * development mode : off
+  #    * running tests : off
+  #    * production / staging  : on
   exit-jvm-when-system-terminated = off
-  
+
 }
 
 lagom.defaults.cluster.join-self = off
