--- a/service/core/client/src/main/resources/reference.conf
+++ b/service/core/client/src/main/resources/reference.conf
@@ -23,8 +23,7 @@ lagom.circuit-breaker {
 
     # A whitelist of fqcn of Exceptions that the CircuitBreaker
     # should not consider failures. By default all exceptions are
-    # failures
-    #
+    # considered failures.
     exception-whitelist = []
   }
 }
