Allow no passivation to be configured
My primary motivation for implementing this is that I have a use case
with a very custom sharding distribution setup (the cluster is divided
into multiple failure groups, with fast failover between them when
timeouts occur), and so I'm instantiating persistent entity actors as
direct children of my own sharded actors, rather than letting Lagom
manage them. Because of this, I want/need my own actors to handle
passivation, and so need to disable passivation of the persistent entity
actors.

--- a/persistence/core/src/main/resources/reference.conf
+++ b/persistence/core/src/main/resources/reference.conf
@@ -20,7 +20,10 @@ lagom.persistence {
   # any messages during this timeout. Passivation is performed to reduce
   # memory consumption. Objects referenced by the entity can be garbage
   # collected after passivation. Next message will activate the entity
-  # again, which will recover its state from persistent storage.  
+  # again, which will recover its state from persistent storage. Set to 0
+  # to disable passivation - this should only be done when the number of
+  # entities is bounded and their state, sharded across the cluster, will
+  # fit in memory.
   passivate-after-idle-timeout = 120s
   
   # Specifies that entities run on cluster nodes with a specific role.
