--- a/persistence/core/src/main/resources/reference.conf
+++ b/persistence/core/src/main/resources/reference.conf
@@ -79,3 +79,18 @@ lagom.persistence.cluster.distribution {
   # Each entity is pinged at this interval. Each node will ping this often, so this interval can be quite long.
   ensure-active-interval = 30s
 }
+
+akka.actor {
+  serializers {
+    lagom-persistence-core = "com.lightbend.lagom.internal.persistence.cluster.ClusterStartupTaskSerializer"
+  }
+  serialization-bindings {
+    // Disabled, will be enabled in Lagom 1.4
+    // "com.lightbend.lagom.internal.persistence.cluster.ClusterStartupTaskActor$Execute$" = lagom-persistence-core
+  }
+  serialization-identifiers {
+    // "lagom-persistence-core".hashCode
+    "com.lightbend.lagom.internal.persistence.cluster.ClusterStartupTaskSerializer" = -1543173302
+  }
+}
+
