disable java serialization in test.

--- a/persistence-jdbc/javadsl/src/main/resources/reference.conf
+++ b/persistence-jdbc/javadsl/src/main/resources/reference.conf
@@ -1,1 +1,5 @@
 play.modules.enabled += com.lightbend.lagom.javadsl.persistence.jdbc.JdbcPersistenceModule
+
+akka.actor.serialization-bindings {
+  "java.io.Serializable" = none
+}
