--- a/persistence-jdbc/javadsl/src/multi-jvm/resources/reference.conf
+++ b/persistence-jdbc/javadsl/src/multi-jvm/resources/reference.conf
@@ -1,6 +1,8 @@
 jdbc-defaults.slick.profile = "slick.jdbc.H2Profile$"
 
-
+akka.actor.serialization-bindings {
+  "java.io.Serializable" = none
+}
 
 # Aggressively restart and ensure the cluster-distributed, readside actors so tests don't take that long.
 lagom.persistence {
