--- a/persistence-jpa/javadsl/src/main/resources/reference.conf
+++ b/persistence-jpa/javadsl/src/main/resources/reference.conf
@@ -19,3 +19,7 @@ lagom.persistence.jpa {
 //#persistence
 
 play.modules.enabled += com.lightbend.lagom.javadsl.persistence.jpa.JpaPersistenceModule
+
+akka.actor.serialization-bindings {
+  "java.io.Serializable" = none
+}
