--- a/pubsub/javadsl/src/main/resources/reference.conf
+++ b/pubsub/javadsl/src/main/resources/reference.conf
@@ -1,5 +1,9 @@
 play.modules.enabled += com.lightbend.lagom.javadsl.pubsub.PubSubModule
 
+akka.actor.serialization-bindings {
+  "java.io.Serializable" = none
+}
+
 lagom.pubsub {
 
   # The subscriber Source has a buffer of this size. 
