--- a/cluster/javadsl/src/main/resources/reference.conf
+++ b/cluster/javadsl/src/main/resources/reference.conf
@@ -1,1 +1,5 @@
 play.modules.enabled += com.lightbend.lagom.internal.javadsl.cluster.JoinClusterModule
+
+akka.actor.serialization-bindings {
+  "java.io.Serializable" = none
+}
