--- a/persistence-cassandra/javadsl/src/main/resources/reference.conf
+++ b/persistence-cassandra/javadsl/src/main/resources/reference.conf
@@ -1,1 +1,5 @@
 play.modules.enabled += com.lightbend.lagom.javadsl.persistence.cassandra.CassandraPersistenceModule
+
+akka.actor.serialization-bindings {
+  "java.io.Serializable" = none
+}
