Add maxFramLength config parameter for WebSocketClient

--- a/service/core/client/src/main/resources/reference.conf
+++ b/service/core/client/src/main/resources/reference.conf
@@ -28,3 +28,11 @@ lagom.circuit-breaker {
   }
 }
 #//#circuit-breaker-default
+
+#//#web-socket-client-default
+lagom.client.websocket {
+
+  #Default WebSocketClient max frame length
+  frame.maxLength = 65536
+}
+#//#web-socket-client-default
