configure HakiriCP to use values aligned with hardcoded values in Slick

--- a/persistence-jdbc/core/src/main/resources/reference.conf
+++ b/persistence-jdbc/core/src/main/resources/reference.conf
@@ -10,8 +10,17 @@ jdbc-defaults.slick {
   jndiName = "DefaultDS"
 }
 
-# Configure the default database to be bound to JNDI
-db.default.jndiName=DefaultDS
+
+db.default {
+  # Configure the default database to be bound to JNDI
+  jndiName=DefaultDS
+
+  hikaricp {
+    minimumIdle = 20
+    maximumPoolSize = 100
+  }
+}
+
 
 lagom.persistence.jdbc {
 
