Configures Slick DB with AsyncExecutor and bind it to JNDI resource

--- a/persistence-jdbc/core/src/main/resources/play/reference-overrides.conf
+++ b/persistence-jdbc/core/src/main/resources/play/reference-overrides.conf
@@ -2,21 +2,21 @@ jdbc-journal.slick {
   profile = ${?jdbc-defaults.slick.profile}
   # for backward compatibility only, will be removed in 1.5.0 (@deprecated)
   driver = ${?jdbc-defaults.slick.driver}
-  jndiName = ${jdbc-defaults.slick.jndiName}
+  jndiDbName = ${jdbc-defaults.slick.jndiDbName}
 }
 
 jdbc-read-journal.slick {
   profile = ${?jdbc-defaults.slick.profile}
   # for backward compatibility only, will be removed in 1.5.0 (@deprecated)
   driver = ${?jdbc-defaults.slick.driver}
-  jndiName = ${jdbc-defaults.slick.jndiName}
+  jndiDbName = ${jdbc-defaults.slick.jndiDbName}
 }
 
 jdbc-snapshot-store.slick {
   profile = ${?jdbc-defaults.slick.profile}
   # for backward compatibility only, will be removed in 1.5.0 (@deprecated)
   driver = ${?jdbc-defaults.slick.driver}
-  jndiName = ${jdbc-defaults.slick.jndiName}
+  jndiDbName = ${jdbc-defaults.slick.jndiDbName}
 }
 
 akka.persistence.journal.plugin = jdbc-journal
