--- a/persistence-jdbc/core/src/main/resources/reference.conf
+++ b/persistence-jdbc/core/src/main/resources/reference.conf
@@ -6,8 +6,21 @@ jdbc-defaults.slick {
   # set to one of: slick.jdbc.PostgresProfile$, slick.jdbc.MySQLProfile$, slick.jdbc.OracleProfile$ or slick.jdbc.H2Profile$
   # profile = "slick.jdbc.PostgresProfile$"
 
-  # The JNDI name
-  jndiName = "DefaultDS"
+  jndiDbName = "DefaultDB"
+
+  async-executor {
+    # number of objects that can be queued by the async exector
+    queueSize = 10000
+
+    # 5 * number of cores
+    numThreads = 20
+
+    # number of threads
+    minConnections = 20
+
+    # 5 * number of threads
+    maxConnections = 100
+  }
 }
 
 
@@ -16,8 +29,8 @@ db.default {
   jndiName=DefaultDS
 
   hikaricp {
-    minimumIdle = 20
-    maximumPoolSize = 100
+    minimumIdle = ${jdbc-defaults.slick.async-executor.minConnections}
+    maximumPoolSize = ${jdbc-defaults.slick.async-executor.maxConnections}
   }
 }
 
@@ -54,6 +67,8 @@ lagom.persistence.jdbc {
 //#persistence
 
 
+# configuration settings for Lagom's read-side
+# this is NOT the configuration of akka-persistence-jdbc read-side component
 lagom.persistence.read-side.jdbc {
 
   tables {
@@ -86,8 +101,8 @@ lagom.persistence.read-side.jdbc {
     # The Slick driver - for backward compatibility only, will be removed in 1.5.0 (@deprecated)
     driver = ${?jdbc-defaults.slick.driver}
 
-    # The JNDI name to use
-    jndiName = ${jdbc-defaults.slick.jndiName}
+    jndiDbName = ${jdbc-defaults.slick.jndiDbName}
+
   }
 
 }
