remove jndiName explicit unset

--- a/persistence-jdbc/core/src/main/resources/play/reference-overrides.conf
+++ b/persistence-jdbc/core/src/main/resources/play/reference-overrides.conf
@@ -3,9 +3,7 @@ jdbc-journal.slick {
   # for backward compatibility only, will be removed in 1.5.0 (@deprecated)
   driver = ${?jdbc-defaults.slick.driver}
 
-  # need to unset jndiName, we must force the akka-persistence-jdbc plugin
-  # to always use the pre-configured DB with AsyncExecutor
-  jndiName = ""
+  # akka-persistence-jdbc plugin uses the pre-configured DB with AsyncExecutor
   jndiDbName = ${jdbc-defaults.slick.jndiDbName}
 }
 
@@ -14,9 +12,7 @@ jdbc-read-journal.slick {
   # for backward compatibility only, will be removed in 1.5.0 (@deprecated)
   driver = ${?jdbc-defaults.slick.driver}
 
-  # need to unset jndiName, we must force the akka-persistence-jdbc plugin
-  # to always use the pre-configured DB with AsyncExecutor
-  jndiName = ""
+  # akka-persistence-jdbc plugin uses the pre-configured DB with AsyncExecutor
   jndiDbName = ${jdbc-defaults.slick.jndiDbName}
 }
 
@@ -25,9 +21,7 @@ jdbc-snapshot-store.slick {
   # for backward compatibility only, will be removed in 1.5.0 (@deprecated)
   driver = ${?jdbc-defaults.slick.driver}
 
-  # need to unset jndiName, we must force the akka-persistence-jdbc plugin
-  # to always use the pre-configured DB with AsyncExecutor
-  jndiName = ""
+  # akka-persistence-jdbc plugin uses the pre-configured DB with AsyncExecutor
   jndiDbName = ${jdbc-defaults.slick.jndiDbName}
 }
 
