allows configuration of different DBs with corresponding async-executor settings

--- a/persistence-jdbc/core/src/main/resources/reference.conf
+++ b/persistence-jdbc/core/src/main/resources/reference.conf
@@ -6,10 +6,28 @@ jdbc-defaults.slick {
   # set to one of: slick.jdbc.PostgresProfile$, slick.jdbc.MySQLProfile$, slick.jdbc.OracleProfile$ or slick.jdbc.H2Profile$
   # profile = "slick.jdbc.PostgresProfile$"
 
-  jndiDbName = "DefaultDB"
+  # The JNDI name for the Slick pre-configured DB
+  # By default, this value will be used by all akka-persistence-jdbc plugin components (journal, read-journal and snapshot).
+  # you may configure each plugin component to use different DB settings
+  jndiDbName=DefaultDB
+}
+
+
+db.default {
+
+  # The JNDI name for this DataSource
+  # Play, and therefore Lagom, will automatically register this DataSource as JNDI resource using this name.
+  # This DataSource will be used to build a pre-configured Slick DB
+  jndiName=DefaultDS
+
+  # Lagom will configure a Slick Database, using the async-executor settings below
+  # and register it as a JNDI resource using this name.
+  # By default, all akka-persistence-jdbc plugin components will use this JDNI name
+  # to lookup for this pre-configured Slick DB
+  jndiDbName=DefaultDB
 
   async-executor {
-    # number of objects that can be queued by the async exector
+    # number of objects that can be queued by the async executor
     queueSize = 10000
 
     # 5 * number of cores
@@ -21,14 +39,28 @@ jdbc-defaults.slick {
     # 5 * number of threads
     maxConnections = 100
   }
-}
 
-
-db.default {
-
+  # Hikari is the default connection pool and it's fine-tuned with to use the same
+  # values for minimum and maximum connections as defined for the async-executor above
   hikaricp {
-    minimumIdle = ${jdbc-defaults.slick.async-executor.minConnections}
-    maximumPoolSize = ${jdbc-defaults.slick.async-executor.maxConnections}
+    minimumIdle = ${db.default.async-executor.minConnections}
+    maximumPoolSize = ${db.default.async-executor.maxConnections}
+  }
+
+  # Alternatively, BoneCP can be used instead of Hikari.
+  # The settings below configured it to use the same
+  # values for minimum and maximum connections as defined for the async-executor above
+  bonecep {
+    # the pool partition count
+    partitionCount = 1
+
+    # the value below is dependent on the partitionCount
+    # it must be equal or less than async-executor.minConnections / partitionCount
+    minConnectionsPerPartition = ${db.default.async-executor.minConnections}
+
+    # the value below is dependent on the partitionCount
+    # it must be equal or less than async-executor.maxConnections / partitionCount
+    maxConnectionsPerPartition = ${db.default.async-executor.maxConnections}
   }
 }
 
