--- a/persistence-jdbc/core/src/main/resources/reference.conf
+++ b/persistence-jdbc/core/src/main/resources/reference.conf
@@ -16,7 +16,7 @@ jdbc-defaults.slick {
 db.default {
 
   # The JNDI name for this DataSource
-  # Play, and therefore Lagom, will automatically register this DataSource as JNDI resource using this name.
+  # Play, and therefore Lagom, will automatically register this DataSource as a JNDI resource using this name.
   # This DataSource will be used to build a pre-configured Slick DB
   jndiName=DefaultDS
 
@@ -48,6 +48,9 @@ db.default {
   }
 
   # Alternatively, BoneCP can be used instead of Hikari.
+  # More information on how to switch to BoneCP can be found here:
+  # https://www.playframework.com/documentation/2.6.x/ScalaDatabase#Selecting-and-configuring-the-connection-pool
+  #
   # The settings below configured it to use the same
   # values for minimum and maximum connections as defined for the async-executor above
   bonecep {
