adds missing documentation about fine-tunning Slick AsyncExecution

--- a/persistence-jdbc/core/src/main/resources/reference.conf
+++ b/persistence-jdbc/core/src/main/resources/reference.conf
@@ -40,7 +40,7 @@ db.default {
     maxConnections = 100
   }
 
-  # Hikari is the default connection pool and it's fine-tuned with to use the same
+  # Hikari is the default connection pool and it's fine-tuned to use the same
   # values for minimum and maximum connections as defined for the async-executor above
   hikaricp {
     minimumIdle = ${db.default.async-executor.minConnections}
