--- a/persistence-cassandra/core/src/main/resources/play/reference-overrides.conf
+++ b/persistence-cassandra/core/src/main/resources/play/reference-overrides.conf
@@ -1,12 +1,12 @@
 
-# Make the stash bounded in size 
+# Make the stash bounded in size
 akka.actor.default-mailbox.stash-capacity = 10000
 
 akka.persistence.journal.plugin = cassandra-journal
 akka.persistence.snapshot-store.plugin = cassandra-snapshot-store
 
 # Defaults are copied from akka-persistence-cassandra module.
-# Copying the values is needed for enabling to inject different 
+# Copying the values is needed for enabling to inject different
 # defaults via `cassandra-journal.defaults.port/keyspace`.
 cassandra-journal.defaults {
   # Port of contact points in the Cassandra cluster
@@ -15,7 +15,7 @@ cassandra-journal.defaults {
 
 
 # Defaults are copied from akka-persistence-cassandra module.
-# Copying the values is needed for enabling to inject different 
+# Copying the values is needed for enabling to inject different
 # defaults via `cassandra-snapshot-store.defaults.port/keyspace`.
 cassandra-snapshot-store.defaults {
   # Port of contact points in the Cassandra cluster
@@ -24,10 +24,10 @@ cassandra-snapshot-store.defaults {
 
 
 # We override the default provided by the library with a reference setting that
-# stores the same default, but allows us to override it via the build's devSettings 
-# setting by passing a different default for `cassandra-journal.defaults.port/keyspace`. 
-# Note that if a value is provided for `cassandra-journal.port/keyspace` in the 
-# project's application.conf, then the latter is always selected in place of the 
+# stores the same default, but allows us to override it via the build's devSettings
+# setting by passing a different default for `cassandra-journal.defaults.port/keyspace`.
+# Note that if a value is provided for `cassandra-journal.port/keyspace` in the
+# project's application.conf, then the latter is always selected in place of the
 # build's devSettings value for `cassandra-journal.defaults.port/keyspace`.
 cassandra-journal {
   port = ${cassandra-journal.defaults.port}
@@ -41,13 +41,23 @@ cassandra-journal {
   cluster-id = ${?CASSANDRA_SERVICE_NAME}
 
   plugin-dispatcher = "lagom.persistence.dispatcher"
+
+  # Disable meta columns in the schema to avoid an error at startup when table auto-creation is enabled:
+  # "com.datastax.driver.core.exceptions.InvalidQueryException: Undefined column name meta_ser_id"
+  #
+  # Lagom does not make use of the new metadata feature, so the new schema is not required.
+  #
+  # See below for more details:
+  # - https://github.com/akka/akka-persistence-cassandra#migrations-from-054-to-059
+  # - https://github.com/akka/akka-persistence-cassandra/blob/v0.59/core/src/main/resources/reference.conf#L165-L172
+  meta-in-events-by-tag-view = off
 }
 
 # We override the default provided by the library with a reference setting that
 # stores the same default, but allows us to override it via the build's devSettings
 # setting by passing a different default for `cassandra-snapshot-store.defaults.port/keyspace`.
 # Note that if a value is provided for `cassandra-snapshot-store.port/keyspace` in the
-# project's application.conf, then the latter is always selected in place of the build's 
+# project's application.conf, then the latter is always selected in place of the build's
 # devSettings value for `cassandra-snapshot-store.defaults.port/keyspace`.
 cassandra-snapshot-store {
   port = ${cassandra-snapshot-store.defaults.port}
