--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,8 @@ env:
   matrix:
     - SCRIPT=test-2.11
     - SCRIPT=test-2.12
-    - SCRIPT=test-sbt
+    - SCRIPT=test-sbt-0.13
+    - SCRIPT=test-sbt-1.0
     - SCRIPT=test-maven
     - SCRIPT=test-documentation
     - SCRIPT=test-code-style
@@ -21,6 +22,12 @@ script: bin/$SCRIPT
 before_install:
     # See https://github.com/travis-ci/travis-ci/issues/4629#issuecomment-239493916
     - rm ~/.m2/settings.xml
+    # Install sbt 1.0 so that we can use its launcher
+    - sudo apt-get install bc # see https://github.com/sbt/sbt/issues/3697
+    - echo "deb https://dl.bintray.com/sbt/debian /" | sudo tee -a /etc/apt/sources.list.d/sbt.list
+    - sudo apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv 2EE0EA64E40A89B84B2DF73499E82A75642AC823
+    - sudo apt-get -qq update
+    - sudo apt-get install sbt -yq
 cache:
   directories:
     - $HOME/.ivy2/cache
