Overrides defaults for host-connection-pool

--- a/dev/service-registry/service-locator/src/main/resources/application.conf
+++ b/dev/service-registry/service-locator/src/main/resources/application.conf
@@ -10,6 +10,15 @@ akka.http {
     idle-timeout = infinite
   }
 
+  host-connection-pool {
+    max-retries = 1
+    idle-timeout = infinite
+
+    client = {
+      idle-timeout = infinite
+    }
+  }
+
   parsing {
     max-content-length = infinite
   }
