typo on bonecp config

--- a/persistence-jdbc/core/src/main/resources/reference.conf
+++ b/persistence-jdbc/core/src/main/resources/reference.conf
@@ -53,7 +53,7 @@ db.default {
   #
   # The settings below configured it to use the same
   # values for minimum and maximum connections as defined for the async-executor above
-  bonecep {
+  bonecp {
     # the pool partition count
     partitionCount = 1
 
