Replace explicit system.terminate() with CS.run calls

--- a/cluster/core/src/main/resources/play/reference-overrides.conf
+++ b/cluster/core/src/main/resources/play/reference-overrides.conf
@@ -1,10 +1,21 @@
-akka.actor.provider = akka.cluster.ClusterActorRefProvider
+akka {
+  actor.provider = akka.cluster.ClusterActorRefProvider
 
-# Disable old deprecated Akka Cluster Metrics
-akka.cluster.metrics.enabled = off
+  # Disable old deprecated Akka Cluster Metrics
+  cluster {
+    metrics.enabled = off
 
-# Make cluster failure detector more tolerant, by default
-akka.cluster.failure-detector.acceptable-heartbeat-pause = 5 s
+    # Make cluster failure detector more tolerant, by default
+    failure-detector.acceptable-heartbeat-pause = 5 s
 
-# Enable Split Brain Resolver keep-majority if Lightbend Reactive Platform is used
-akka.cluster.split-brain-resolver.active-strategy=keep-majority
+    # Enable Split Brain Resolver keep-majority if Lightbend Reactive Platform is used
+    split-brain-resolver.active-strategy = keep-majority
+  }
+
+  # If cluster is enabled then CS should be triggered when Downed.
+  run-coordinated-shutdown-when-down = on
+}
+
+play.akka {
+  run-cs-from-phase = "before-cluster-shutdown"
+}
