--- a/dev/sbt-plugin/src/sbt-test/sbt-plugin/http-backend-switch/akka-http-impl/src/main/resources/application.conf
+++ b/dev/sbt-plugin/src/sbt-test/sbt-plugin/http-backend-switch/akka-http-impl/src/main/resources/application.conf
@@ -1,6 +1,9 @@
 #
 #
 #
-play.crypto.secret = whatever
+play.http.secret.key = whatever
 play.modules.enabled += com.example.hello.impl.HelloModule
 
+## This value is not availble in dev mode (fix https://github.com/lagom/lagom/issues/1136 first)
+## When that issue is fixed this tests can be simplified.
+play.server.akka.server-header = "akka-backend/1.2.3.4.5"
