--- a/dev/sbt-plugin/src/sbt-test/sbt-plugin/http-backend-switch/netty-impl/src/main/resources/application.conf
+++ b/dev/sbt-plugin/src/sbt-test/sbt-plugin/http-backend-switch/netty-impl/src/main/resources/application.conf
@@ -2,7 +2,7 @@
 #
 #
 play.http.secret.key = whatever
-play.modules.enabled += com.example.hello.impl.HelloModule
+play.modules.enabled += com.example.netty.impl.NettyModule
 
 ## This value is not availble in dev mode (fix https://github.com/lagom/lagom/issues/1136 first)
 ## When that issue is fixed this tests can be simplified.
