Fix default settings and remove obsolete setting.

--- a/cluster/core/src/main/resources/play/reference-overrides.conf
+++ b/cluster/core/src/main/resources/play/reference-overrides.conf
@@ -1,6 +1,8 @@
 akka {
   actor.provider = akka.cluster.ClusterActorRefProvider
 
+  jvm-shutdown-hooks = off
+
   # Disable old deprecated Akka Cluster Metrics
   cluster {
     metrics.enabled = off
@@ -10,10 +12,11 @@ akka {
 
     # Enable Split Brain Resolver keep-majority if Lightbend Reactive Platform is used
     split-brain-resolver.active-strategy = keep-majority
+
+    # If cluster is enabled then CS should be triggered when Downed.
+    run-coordinated-shutdown-when-down = on
   }
 
-  # If cluster is enabled then CS should be triggered when Downed.
-  run-coordinated-shutdown-when-down = on
 }
 
 play.akka {
