adds cross-version support for lagom-maven-dependencies and mvn archetype

--- a/dev/archetypes/maven-java/src/main/resources/archetype-resources/__service2Name__-impl/src/main/resources/application.conf
+++ b/dev/archetypes/maven-java/src/main/resources/archetype-resources/__service2Name__-impl/src/main/resources/application.conf
@@ -18,3 +18,20 @@ ${service2Name}.cassandra.keyspace = ${service2Name}
 cassandra-journal.keyspace = ${${service2Name}.cassandra.keyspace}
 cassandra-snapshot-store.keyspace = ${${service2Name}.cassandra.keyspace}
 lagom.persistence.read-side.cassandra.keyspace = ${${service2Name}.cassandra.keyspace}
+
+# -----------------------------------------------------------------
+# DON'T REMOVE!!!
+# The properties below overrides the Lagom defaults.
+#
+# For compatibility reasons we are not yet changing the defaults,
+# but for new projects, we highly recommend the values below.
+# Future Lagom releases will have these values by default.
+
+# prefer 'ddata' over 'persistence' for new projects
+akka.cluster.sharding.state-store-mode = ddata
+
+# enable new Akka serializer for akka.Done (since akka 2.5.8)
+akka.actor.serialization-bindings {
+  "akka.Done" = akka-misc
+}
+# -----------------------------------------------------------------
