--- a/dev/maven-plugin/src/maven-test/external-project-2.12/pom.xml
+++ b/dev/maven-plugin/src/maven-test/external-project-2.12/pom.xml
@@ -69,5 +69,6 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <scala.binary.version>2.12</scala.binary.version>
     </properties>
 </project>
