--- a/dev/maven-plugin/src/maven-test/java-archetype-2.11/pom.xml
+++ b/dev/maven-plugin/src/maven-test/java-archetype-2.11/pom.xml
@@ -17,4 +17,5 @@
         </profile>
     </profiles>
 
+    <!-- Note: scala.binary.version is *not* defined here, because it should have a default value in the artifact. -->
 </project>
