--- a/dev/archetypes/maven-java/src/main/resources/archetype-resources/__service2Name__-impl/pom.xml
+++ b/dev/archetypes/maven-java/src/main/resources/archetype-resources/__service2Name__-impl/pom.xml
@@ -50,4 +50,16 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>com.lightbend.lagom</groupId>
+                <artifactId>lagom-maven-plugin</artifactId>
+                <configuration>
+                    <lagomService>true</lagomService>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
