Adjust the comments in application.conf

--- a/dev/archetypes/maven-java/src/main/resources/archetype-resources/__service2Name__-impl/src/main/resources/application.conf
+++ b/dev/archetypes/maven-java/src/main/resources/archetype-resources/__service2Name__-impl/src/main/resources/application.conf
@@ -19,19 +19,15 @@ cassandra-journal.keyspace = ${${service2Name}.cassandra.keyspace}
 cassandra-snapshot-store.keyspace = ${${service2Name}.cassandra.keyspace}
 lagom.persistence.read-side.cassandra.keyspace = ${${service2Name}.cassandra.keyspace}
 
-# -----------------------------------------------------------------
-# DON'T REMOVE!!!
-# The properties below overrides the Lagom defaults.
+# The properties below override Lagom default configuration with the recommended values for new projects.
 #
-# For compatibility reasons we are not yet changing the defaults,
-# but for new projects, we highly recommend the values below.
-# Future Lagom releases will have these values by default.
+# Lagom has not yet made these settings the defaults for backward-compatibility reasons.
 
-# prefer 'ddata' over 'persistence' for new projects
+# Prefer 'ddata' over 'persistence' to share cluster sharding state for new projects.
+# See https://doc.akka.io/docs/akka/current/cluster-sharding.html#distributed-data-vs-persistence-mode
 akka.cluster.sharding.state-store-mode = ddata
 
-# enable new Akka serializer for akka.Done (since akka 2.5.8)
+# Enable the serializer for akka.Done provided in Akka 2.5.8+ to avoid the use of Java serialization.
 akka.actor.serialization-bindings {
   "akka.Done" = akka-misc
 }
-# -----------------------------------------------------------------
