Maven Dependency POM and Archetype supporting 2.11 and 2.12 (#1147)
* adds cross-version support for lagom-maven-dependencies and mvn archetype

* Restore lagom-maven-plugin in the archetype

* Add Maven tests for both Scala 2.11 and 2.12

This requires splitting each test case into two separate directories
(because sbt only supports cross-building commands from sbt 1.0.1+ and
sbt-doge does not support it at all).

Each test directory now sets the scala.binary.version property
appropriately.

Note that in the archetype test, scala.binary.version is passed to the
archetype:generate goal, which should substitute it into the generated
project POM.

* Fix imports in build.sbt

* Set Scala binary version when creating a project

* Adjust the comments in application.conf

* some minor comments improvements

--- a/dev/archetypes/maven-java/src/main/resources/archetype-resources/pom.xml
+++ b/dev/archetypes/maven-java/src/main/resources/archetype-resources/pom.xml
@@ -74,11 +74,6 @@
                 <type>pom</type>
             </dependency>
             <dependency>
-                <groupId>com.typesafe.conductr</groupId>
-                <artifactId>${conductr.lib.name}</artifactId>
-                <version>1.4.7</version>
-            </dependency>
-            <dependency>
                 <groupId>org.projectlombok</groupId>
                 <artifactId>lombok</artifactId>
                 <version>1.16.10</version>
@@ -89,7 +84,9 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
+        <scala.binary.version>${scala-binary-version}</scala.binary.version>
+        ## Substitues in the scala-binary-version value entered when a project is created from the archetype
+
         <lagom.version>%LAGOM-VERSION%</lagom.version>
-        <conductr.lib.name>lagom10-conductr-bundle-lib_2.11</conductr.lib.name>
     </properties>
 </project>
