Ensure Akka cluster is left gracefully (#1109)
* Replace custom cluster leaving and shutdown code with CoordinatedShutdown
* Replace explicit system.terminate() with CoordinatedShutdown calls
* Deprecates PersistentEntityRegistry.gracefulShutdown
* Use ActorSystemProvider from Play 2.6.10

--- a/cluster/core/src/main/resources/play/reference-overrides.conf
+++ b/cluster/core/src/main/resources/play/reference-overrides.conf
@@ -1,10 +1,22 @@
-akka.actor.provider = akka.cluster.ClusterActorRefProvider
+akka {
+  actor.provider = akka.cluster.ClusterActorRefProvider
 
-# Disable old deprecated Akka Cluster Metrics
-akka.cluster.metrics.enabled = off
+  jvm-shutdown-hooks = off
 
-# Make cluster failure detector more tolerant, by default
-akka.cluster.failure-detector.acceptable-heartbeat-pause = 5 s
+  # Disable old deprecated Akka Cluster Metrics
+  cluster {
+    metrics.enabled = off
 
-# Enable Split Brain Resolver keep-majority if Lightbend Reactive Platform is used
-akka.cluster.split-brain-resolver.active-strategy=keep-majority
+    # Make cluster failure detector more tolerant, by default
+    failure-detector.acceptable-heartbeat-pause = 5 s
+
+    # Enable Split Brain Resolver keep-majority if Lightbend Reactive Platform is used
+    split-brain-resolver.active-strategy = keep-majority
+
+  }
+
+}
+
+play.akka {
+  run-cs-from-phase = "before-cluster-shutdown"
+}
