--- a/pubsub/scaladsl/src/main/resources/reference.conf
+++ b/pubsub/scaladsl/src/main/resources/reference.conf
@@ -4,3 +4,8 @@ lagom.pubsub {
   subscriber-buffer-size = 1000
 
 }
+
+akka.actor.serialization-bindings {
+  "java.io.Serializable" = none
+  "akka.Done" = akka-misc
+}
