--- a/persistence-jdbc/scaladsl/src/multi-jvm/resources/reference.conf
+++ b/persistence-jdbc/scaladsl/src/multi-jvm/resources/reference.conf
@@ -1,5 +1,10 @@
 jdbc-defaults.slick.profile = "slick.jdbc.H2Profile$"
 
+akka.actor.serialization-bindings {
+  "java.io.Serializable" = none
+  "akka.Done" = akka-misc
+}
+
 # Aggressively restart and ensure the cluster-distributed, readside actors so tests don't take that long.
 lagom.persistence {
   read-side.failure-exponential-backoff {
