--- a/persistence-jdbc/javadsl/src/main/resources/reference.conf
+++ b/persistence-jdbc/javadsl/src/main/resources/reference.conf
@@ -1,1 +1,6 @@
 play.modules.enabled += com.lightbend.lagom.javadsl.persistence.jdbc.JdbcPersistenceModule
+
+akka.actor.serialization-bindings {
+  "java.io.Serializable" = none
+  "akka.Done" = akka-misc
+}
