--- a/dev/archetypes/maven-java/src/main/resources/archetype-resources/__service2Name__-impl/src/main/resources/application.conf
+++ b/dev/archetypes/maven-java/src/main/resources/archetype-resources/__service2Name__-impl/src/main/resources/application.conf
@@ -30,4 +30,6 @@ akka.cluster.sharding.state-store-mode = ddata
 # Enable the serializer for akka.Done provided in Akka 2.5.8+ to avoid the use of Java serialization.
 akka.actor.serialization-bindings {
   "akka.Done" = akka-misc
+  "akka.actor.Address"        = akka-misc
+  "akka.remote.UniqueAddress" = akka-misc
 }
