enabled timeout when fetch read-side offset

--- a/persistence-jdbc/core/src/main/resources/reference.conf
+++ b/persistence-jdbc/core/src/main/resources/reference.conf
@@ -38,6 +38,9 @@ db.default {
 
     # 5 * number of threads
     maxConnections = 100
+
+    # if true, a Mbean for AsyncExecutor will be registered
+    registerMbeans = false
   }
 
   # Hikari is the default connection pool and it's fine-tuned to use the same
