--- a/persistence/core/src/main/resources/reference.conf
+++ b/persistence/core/src/main/resources/reference.conf
@@ -1,13 +1,13 @@
 #//#persistence
 lagom.persistence {
 
-  # As a rule of thumb, the number of shards should be a factor ten greater 
+  # As a rule of thumb, the number of shards should be a factor ten greater
   # than the planned maximum number of cluster nodes. Less shards than number
-  # of nodes will result in that some nodes will not host any shards. Too many 
-  # shards will result in less efficient management of the shards, e.g. 
-  # rebalancing overhead, and increased latency because the coordinator is 
-  # involved in the routing of the first message for each shard. The value 
-  # must be the same on all nodes in a running cluster. It can be changed 
+  # of nodes will result in that some nodes will not host any shards. Too many
+  # shards will result in less efficient management of the shards, e.g.
+  # rebalancing overhead, and increased latency because the coordinator is
+  # involved in the routing of the first message for each shard. The value
+  # must be the same on all nodes in a running cluster. It can be changed
   # after stopping all nodes in the cluster.
   max-number-of-shards = 100
 
@@ -15,8 +15,8 @@ lagom.persistence {
   # events. Snapshots are used to reduce recovery times.
   # It may be configured to "off" to disable snapshots.
   snapshot-after = 100
-  
-  # A persistent entity is passivated automatically if it does not receive 
+
+  # A persistent entity is passivated automatically if it does not receive
   # any messages during this timeout. Passivation is performed to reduce
   # memory consumption. Objects referenced by the entity can be garbage
   # collected after passivation. Next message will activate the entity
@@ -25,15 +25,15 @@ lagom.persistence {
   # entities is bounded and their state, sharded across the cluster, will
   # fit in memory.
   passivate-after-idle-timeout = 120s
-  
+
   # Specifies that entities run on cluster nodes with a specific role.
   # If the role is not specified (or empty) all nodes in the cluster are used.
   # The entities can still be accessed from other nodes.
   run-entities-on-role = ""
-  
+
   # Default timeout for PersistentEntityRef.ask replies.
   ask-timeout = 5s
-  
+
   dispatcher {
     type = Dispatcher
     executor = "thread-pool-executor"
@@ -43,20 +43,23 @@ lagom.persistence {
     throughput = 1
   }
 }
-#//#persistence  
-  
+#//#persistence
+
 #//#persistence-read-side
 lagom.persistence.read-side {
+
+  # how long should we wait when retrieving the last known offset
+  offset-timeout = 5s
 
   # Exponential backoff for failures in ReadSideProcessor
   failure-exponential-backoff {
     # minimum (initial) duration until processor is started again
     # after failure
     min = 3s
-    
+
     # the exponential back-off is capped to this duration
     max = 30s
-    
+
     # additional random delay is based on this factor
     random-factor = 0.2
   }
