--- a/persistence-jdbc/core/src/main/resources/reference.conf
+++ b/persistence-jdbc/core/src/main/resources/reference.conf
@@ -33,10 +33,10 @@ db.default {
     # 5 * number of cores
     numThreads = 20
 
-    # same as number number of threads
+    # same as number of threads
     minConnections = 20
 
-    # same as number number of threads
+    # same as number of threads
     maxConnections = 20
 
     # if true, a Mbean for AsyncExecutor will be registered
