Upgrades Slick and akka-persistence-jdbc versions (#1286)
* upgrades Slick and akka-persistence-jdbc versions

* adapted async-executer config according to new slick recommendations

* s/number number/number/

* updated lagom version in LagomBuild file

--- a/persistence-jdbc/core/src/main/resources/reference.conf
+++ b/persistence-jdbc/core/src/main/resources/reference.conf
@@ -33,11 +33,11 @@ db.default {
     # 5 * number of cores
     numThreads = 20
 
-    # number of threads
+    # same as number of threads
     minConnections = 20
 
-    # 5 * number of threads
-    maxConnections = 100
+    # same as number of threads
+    maxConnections = 20
 
     # if true, a Mbean for AsyncExecutor will be registered
     registerMbeans = false
