minor fixes to kafka message broker tests
Fix config keys (`client` was missing).
Add group id in one of the tests.

--- a/service/javadsl/kafka/server/src/test/resources/application.conf
+++ b/service/javadsl/kafka/server/src/test/resources/application.conf
@@ -1,12 +1,12 @@
 # Disabled batching of messages on the consumer
-lagom.broker.kafka.consumer.batching-size = 1
+lagom.broker.kafka.client.consumer.batching-size = 1
 
 akka.loggers = [akka.testkit.TestEventListener]
 
-lagom.broker.kafka.producer.failure-exponential-backoff {
+lagom.broker.kafka.client.producer.failure-exponential-backoff {
   min = 100 milliseconds
   max = 200 milliseconds
 }
 
 #akka.kafka.consumer.wakeup-timeout = 3s
-akka.kafka.consumer.max-wakeups = 20
+akka.kafka.client.consumer.max-wakeups = 20
