Use unique, explicit timeout values on await when possible

--- a/docs/src/test/resources/application.conf
+++ b/docs/src/test/resources/application.conf
@@ -4,3 +4,5 @@ play.modules.disabled += play.api.db.DBModule
 play.modules.disabled += play.api.db.HikariCPModule
 play.modules.disabled += com.lightbend.lagom.javadsl.persistence.jdbc.JdbcPersistenceModule
 play.modules.disabled += com.lightbend.lagom.javadsl.persistence.jpa.JpaPersistenceModule
+
+akka.test.single-expect-default = 14s
