Fixing reference.conf

--- a/persistence/core/src/main/resources/reference.conf
+++ b/persistence/core/src/main/resources/reference.conf
@@ -35,6 +35,14 @@ lagom.persistence {
   ask-timeout = 5s
 
 
+  # Error tracing features for debugging AskTimeout exceptions in production
+  error-tracing {
+    # Enable logging of cluster state when an AskTimeout exception occurs when sending a command to a persistent entity
+    log-cluster-state-on-timeout = false
+    # Enable logging of the payload of the command when an AskTimeout exception occurs
+    log-command-payload-on-failure = false
+  }
+
   dispatcher {
     type = Dispatcher
     executor = "thread-pool-executor"
