--- a/dev/maven-plugin/src/main/maven/plugin.xml
+++ b/dev/maven-plugin/src/main/maven/plugin.xml
@@ -170,7 +170,16 @@
                 <kafkaAddress implementation="java.lang.String">${kafka.address}</kafkaAddress>
             </configuration>
         </parameter>
-
+        <parameter>
+            <name>serviceLocatorHost</name>
+            <type>java.lang.String</type>
+            <required>false</required>
+            <editable>true</editable>
+            <description>The host to run the service locator on.</description>
+            <configuration>
+                <serviceLocatorHost implementation="java.lang.String" default-value="127.0.0.1">${service.locator.host}</serviceLocatorHost>
+            </configuration>
+        </parameter>
         <parameter>
             <name>serviceLocatorPort</name>
             <type>int</type>
@@ -179,6 +188,16 @@
             <description>The port to run the service locator on.</description>
             <configuration>
                 <serviceLocatorPort implementation="int" default-value="9008">${service.locator.port}</serviceLocatorPort>
+            </configuration>
+        </parameter>
+        <parameter>
+            <name>serviceGatewayHost</name>
+            <type>java.lang.String</type>
+            <required>false</required>
+            <editable>true</editable>
+            <description>The host to run the service gateway on.</description>
+            <configuration>
+                <serviceGatewayHost implementation="java.lang.String" default-value="127.0.0.1">${service.gateway.host}</serviceGatewayHost>
             </configuration>
         </parameter>
         <parameter>
@@ -405,7 +424,13 @@
             <phase>pre-integration-test</phase>
             <parameters>
                 <parameter>
+                    <name>serviceLocatorHost</name>
+                </parameter>
+                <parameter>
                     <name>serviceLocatorPort</name>
+                </parameter>
+                <parameter>
+                    <name>serviceGatewayHost</name>
                 </parameter>
                 <parameter>
                     <name>serviceGatewayPort</name>
