[WIP] Retry JDBC connections on failure
Fixes #452

--- a/persistence-jdbc/core/src/main/resources/reference.conf
+++ b/persistence-jdbc/core/src/main/resources/reference.conf
@@ -48,6 +48,9 @@ db.default {
   hikaricp {
     minimumIdle = ${db.default.async-executor.minConnections}
     maximumPoolSize = ${db.default.async-executor.maxConnections}
+    # Do not eagerly initialize connections when the pool is started, which
+    # causes the service to fail completely if the database is unavailable
+    initializationFailTimeout = -1
   }
 
   # Alternatively, BoneCP can be used instead of Hikari.
